<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/attendeeMain"
    android:background="@color/grey">

    <!-- header with home button -->
    <com.google.android.material.appbar.MaterialToolbar
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_home"
        app:navigationContentDescription="Home"
        app:title="Events"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        android:background="@color/dark_grey"
        app:menu="@menu/menu_attendee"/>


    <!-- the fragments-->
    <FrameLayout
        android:id="@+id/attendeeContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </FrameLayout>

    <!-- the navbar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:background="@color/dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_selector"
        app:itemTextColor="@color/bottom_nav_selector"/>
</LinearLayout>
