<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_events"
        android:title="@string/events"
        android:icon="@drawable/ic_calendar"/>

    <item android:id="@+id/nav_scan"
        android:title="@string/scan"
        android:icon="@drawable/ic_camera"/>

    <item android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"/>
</menu>