<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:layout_gravity="center"
    tools:context=".AdminActivity">

    <!-- Top app bar / toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:background="@color/dark_grey"
        app:navigationIcon="@drawable/ic_home"
        app:navigationContentDescription="Home"
        app:title="Admin"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Main content -->
    <LinearLayout
        android:id="@+id/adminContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/adminBottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_grey"
            android:text="Browse Images"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBrowseEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_grey"
            android:text="Browse Events"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBrowseUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white_grey"
            android:text="Browse Users"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_grey"
            android:text="Notification Log"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRemoveOrganizers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white_grey"
            android:text="Remove Organizer"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Fragment container for AdminUsersFragment / AdminEventsFragment -->
    <FrameLayout
        android:id="@+id/adminFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/adminBottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom nav: currently just a Back button -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/adminBottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemIconTint="@color/bottom_nav_selector"
        app:itemTextColor="@color/bottom_nav_selector"
        app:menu="@menu/bottom_nav_organizer" />

</androidx.constraintlayout.widget.ConstraintLayout>
